fix(header) text shift

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -31,7 +31,7 @@
 }
 
 .switches__wrapper {
-  max-width: 170px;
+  max-width: 190px;
   width: 100%;
   display: flex;
   flex-direction: column;
