--- a/src/components/NavMaterial/NavMaterial.scss
+++ b/src/components/NavMaterial/NavMaterial.scss
@@ -1,5 +1,13 @@
 @import '../../utils/variables';
 
+.NavMaterial__wrapper {
+  max-width: 190px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
 .nav__button {
   margin: 0;
   padding: 0;
